# Tic-Tac-Toe-with-OpenGL

./: CMakeLists.txt  Config.hpp  EBO.hpp  Main.cpp  README.md  ShaderProgram.hpp  VAO.hpp  VBO.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: fragmentShader.frag  vertexShader.vert
